@@ -213,6 +213,11 @@ from backend_bases import FigureCanvasBase
 from artist import getp, get
 from artist import setp as _setp
 
+
+
+import matplotlib.cbook as cbook
+from matplotlib.mlab import csv2rec
+
 # a hack to keep old versions of ipython working with mpl after bug
 # fix #1209354
 if 'IPython.Shell' in  sys.modules:
@@ -1500,6 +1505,103 @@ def box(on=None):
     ax.set_frame_on(on)
     draw_if_interactive()
 
+
+
+
+def plotfile(fname, cols=(0,), plotfuncs=None,
+             comments='#', skiprows=0, checkrows=5, delimiter=',',
+             **kwargs):
+    """
+    plot the data in fname
+
+    cols is a sequence of column identifiers to plot.  An identifier
+    is either an int or a string.  if it is an int, it indicates the
+    column number.  If it is a string, it indicates the column header.
+    mpl will make column headers lower case, replace spaces with
+    strings, and remove all illegal characters; so 'Adj Close*' will
+    have name 'adj_close'
+
+    if len(cols)==1, only that column will be plotted on the y axis.
+    if len(cols)>1, the first element will be an identifier for data
+    for the x axis and the remaining elements will be the column
+    indexes for multiple subplots
+
+    plotfuncs, if not None, is a dictionary mapping identifier to an
+    Axes plotting function as a string.  Default is 'plot', other
+    choices are 'semilogy', 'fill', 'bar', etc...  You must use the
+    same type of identifier in the cols vector as you use in the
+    plotfuncs dictionary, eg integer column numbers in both or column
+    names in both.
+
+    comments, skiprows, checkrows, and delimiter are all passed on to
+    matplotlib.mlab.csv2rec to load the data into a record array
+
+    kwargs are passed on to plotting functions
+
+    Example usage:
+
+      # plot the 2nd and 4th column against the 1st in two subplots
+      plotfile(fname, (0,1,3))  
+
+      # plot using column names; specify an alternate plot type for volume
+      plotfile(fname, ('date', 'volume', 'adj_close'), plotfuncs={'volume': 'semilogy'})
+    """
+
+    fig = figure()
+    if len(cols)<1:
+        raise ValueError('must have at least one column of data')
+
+    if plotfuncs is None:
+        plotfuncs = dict()
+    r = csv2rec(fname, comments=comments,
+                skiprows=skiprows, checkrows=checkrows, delimiter=delimiter)
+
+    def getname_val(identifier):
+        'return the name and column data for identifier'
+        if cbook.is_string_like(identifier):
+            return identifier, r[identifier]
+        elif cbook.is_numlike(identifier):            
+            name = r.dtype.names[int(identifier)]
+            return name, r[name]
+
+
+    xname, x = getname_val(cols[0])
+
+    if len(cols)==1:
+        ax1 = fig.add_subplot(N,1,i)
+        funcname = plotfuncs.get(cols[0], 'plot')
+        func = getattr(ax1, funcname)
+        func(x, **kwargs)
+        ax1.set_xlabel(xname)
+    else:
+        N = len(cols)
+        for i in range(1,N):
+            if i==1:
+                ax = ax1 = fig.add_subplot(N-1,1,i)
+                ax.grid(True)
+            else:
+                ax = fig.add_subplot(N-1,1,i, sharex=ax1)
+                ax.grid(True)
+
+
+            yname, y = getname_val(cols[i])
+
+            funcname = plotfuncs.get(cols[i], 'plot')
+            func = getattr(ax, funcname)
+            
+            func(x, y, **kwargs)
+            ax.set_ylabel(yname)
+            if ax.is_last_row():
+                ax.set_xlabel(xname)
+            else:
+                ax.set_xlabel('')
+
+
+    if xname=='date':
+        fig.autofmt_xdate()
+        
+
+
 ### Deprecated functions:
 def scatter_classic(*args, **kwargs):
     return gca().scatter_classic(*args, **kwargs)
@@ -1510,6 +1612,8 @@ def pcolor_classic(*args, **kwargs):
     return gca().pcolor_classic(*args, **kwargs)
 if Axes.pcolor_classic.__doc__ is not None:
     pcolor_classic.__doc__ = dedent(Axes.pcolor_classic.__doc__)
+
+
 
 ### Do not edit below this point
 # This function was autogenerated by boilerplate.py.  Do not edit as
